# feedback-report

./: .gitignore  README.md  manage.py  pyproject.toml
assignment/: models.py  tasks.py  urls.py  views.py
docker/: Dockerfile  docker-compose.yml
feedback_report/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
